crates/brasa_parser/tests/snapshots/precedence__command_call_with_explicit_parens_in_expression_position.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let x = puts(\\\"a\\\")\")"
---
Let x
  Call
    Ident(puts)
    StringLit
      Text(raw=false) "a"
