crates/brasa_parser/tests/snapshots/precedence__generics_inline_constraint.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"def log<T: { def toString(): string }>(value: T)\\n  puts value\\nend\")"
---
FuncDef log<T: {toString}>(value)
  Call
    Ident(puts)
    Ident(value)
