crates/brasa_parser/tests/snapshots/precedence__group_without_a_comma_stays_a_grouping.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let p = (1 + 2) * 3\")"
---
Let p
  Binary(*)
    Binary(+)
      Int(1)
      Int(2)
    Int(3)
