crates/brasa_parser/tests/snapshots/precedence__interface_with_throws_member.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"interface Fetcher\\n  def fetch(url: string): string throws NetError\\nend\")"
---
InterfaceDef Fetcher
  def fetch(url) throws NetError
