crates/brasa_parser/tests/snapshots/precedence__lambda_oror_still_logical_or.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let b = x || y\")"
---
Let b
  Binary(||)
    Ident(x)
    Ident(y)
