crates/brasa_parser/tests/snapshots/precedence__lambda_zero_params_do.snap
---
source: crates/brasa_parser/tests/precedence.rs
expression: "dump_source(\"let f = do ||\\n  42\\nend\")"
---
Let f
  Lambda()
    Int(42)
